generamos archivos jupyter en INGLES para Zhou

--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Robin Hood: \n",
-    "Estamos en plena competición para ganar el concurso de tiro con arco en Sherwood. Con nuestro arco y flechas disparamos sobre una diana e intentamos acertar lo más posible del centro. \n",
+    "Estamos en plena competición para ganar el concurso de tiro con arco en Sherwood. Con nuestro arco y flechas disparamos sobre una diana e intentamos acertar lo más cerca posible del centro. \n",
     "\n",
     "El centro de la diana viene representado por los valores (0, 0) en los ejes de coordenadas. \n",
     "\n",
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
