--- a/bus/bus-solution.ipynb
+++ b/bus/bus-solution.ipynb
@@ -36,20 +36,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]\n",
+    "# variables\n",
     "\n",
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8), (4, 6), (2, 3)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
     "# 1. Calculate the number of stops.\n",
     "\n",
-    "\n",
+    "n_stops = len(stops)\n",
+    "print(n_stops)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
     "# 2. Assign a variable a list whose elements are the number of passengers in each stop: \n",
     "# Each item depends on the previous item in the list + in - out.\n",
     "\n",
-    "\n",
+    "ocupation = [0]\n",
+    "for i, o in stops: \n",
+    "    ocupation.append(ocupation[-1]+i-o)\n",
+    "ocupation.pop(0) # ocupacion = ocupacion[1::]\n",
+    "print(ocupation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
     "# 3. Find the maximum occupation of the bus.\n",
     "\n",
-    "\n",
+    "maxi = max(ocupation)\n",
+    "print(maxi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.333333333333334\n",
+      "3.197221015541813\n"
+     ]
+    }
+   ],
+   "source": [
     "# 4. Calculate the average occupation. And the standard deviation.\n",
-    "\n"
+    "\n",
+    "def media(x): \n",
+    "    return sum(x)/len(x)\n",
+    "\n",
+    "def std_dev(x): \n",
+    "    u = media(x)\n",
+    "    return (sum([(e-u)**2 for e in x])/len(x))**0.5\n",
+    "\n",
+    "mu = media(ocupation)\n",
+    "sigma = std_dev(ocupation)\n",
+    "print(mu)\n",
+    "print(sigma)"
    ]
   },
   {
