--- a/snail-and-well/snail-and-well-solution.ipynb
+++ b/snail-and-well/snail-and-well-solution.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Snail and the well\n",
+    "# Snail and well\n",
     "\n",
     "A snail falls at the bottom of a 125 cm well. Each day the snail rises 30 cm. But at night, while sleeping, slides 20 cm because the walls are wet. How many days does it take to escape from the well?\n",
     "\n",
-    "http://puzzles.nigelcoldwell.co.uk/sixtytwo.htm"
+    "TIP: http://puzzles.nigelcoldwell.co.uk/sixtytwo.htm"
    ]
   },
   {
@@ -22,20 +22,38 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "\n",
-    "\n",
+    "well_cm = 125\n",
+    "day_cm = 30\n",
+    "night_cm = 20\n",
+    "distance_cm = 0\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "days = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "\n",
+    "while True: # while distancia_cm < pozo_cm\n",
+    "    distance_cm += day_cm\n",
+    "    days += 1\n",
+    "    if distance_cm > well_cm: \n",
+    "        break\n",
+    "    else: \n",
+    "        distance_cm -= night_cm\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n"
+    "print('Days =', days)\n"
    ]
   },
   {
@@ -72,29 +90,64 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 6\n",
+      "77 12\n",
+      "38.09090909090909\n",
+      "17.159437082600803\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "\n",
+    "well_cm = 125\n",
+    "night_cm = 20\n",
+    "distance_cm = 0\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
+    "days = 0\n",
     "\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "for a in advance_cm: \n",
+    "    distance_cm += a\n",
+    "    days += 1\n",
+    "    if distance_cm > well_cm: \n",
+    "        break\n",
+    "    else: \n",
+    "        distance_cm -= night_cm\n",
     "\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
+    "print('Days =', days)\n",
     "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
+    "maxi, mini = max(advance_cm), min(advance_cm)\n",
+    "print(maxi, mini)\n",
     "\n",
     "\n",
     "# What is its average progress?\n",
+    "def media(nums): \n",
+    "    return sum(nums)/len(nums)\n",
     "\n",
+    "mu = media(advance_cm)\n",
+    "print(mu)\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
-    "\n"
+    "def std_dev(nums): \n",
+    "    mu = media(nums) \n",
+    "    return (sum([(e-mu)**2 for e in nums])/len(nums))**0.5\n",
+    "\n",
+    "sigma = std_dev(advance_cm)\n",
+    "print(sigma)\n"
    ]
   },
   {
