--- a/temperature/temperature-solution.ipynb
+++ b/temperature/temperature-solution.ipynb
@@ -11,7 +11,17 @@
     "We provide the temperatures measured throughout the 24 hours of a day in a list-type data structure composed of 24 integers:\n",
     "```\n",
     "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39 ]\n",
-    "```"
+    "```\n",
+    "\n",
+    "## Goals\n",
+    "\n",
+    "1. Treatment of lists\n",
+    "2. Use of loop or list comprenhention\n",
+    "3. Calculation of the mean, minimum and maximum.\n",
+    "4. Filtering of lists.\n",
+    "5. Interpolate an outlier.\n",
+    "6. Logical operators.\n",
+    "7. Print"
    ]
   },
   {
@@ -93,31 +103,73 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minimum = 0\n",
+      "maximum = 90\n",
+      "temperatures higher or equal than 70ºC [70, 76, 80, 81, 80, 83, 90, 79]\n",
+      "mean = 60.25\n",
+      "Estimation of the temperature at 3:00 = 62.0\n",
+      "Corrected temperatures after estimation:  [33, 66, 65, 62.0, 59, 60, 62, 64, 70, 76, 80, 81, 80, 83, 90, 79, 61, 53, 50, 49, 53, 48, 45, 39]\n",
+      "Temperatures in Fahrenheit Grades = [91.4, 150.8, 149.0, 143.60000000000002, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
    "source": [
     "# assign a variable to the list of temperatures\n",
     "temperatures_C = [33,66,65,0,59,60,62,64,70,76,80,81,80,83,90,79,61,53,50,49,53,48,45,39 ]\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
-    "\n",
+    "mini = min(temperatures_C)\n",
+    "print('minimum =', mini)\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
-    "\n",
+    "maxi = max(temperatures_C)\n",
+    "print('maximum =', maxi)\n",
     "\n",
     "# 3. Items in the list that are greater than 70ºC and print the result\n",
+    "heq_70 = [t for t in temperatures_C if t>=70] # cambiarlo\n",
+    "print('temperatures higher or equal than 70ºC', heq_70)\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "# 3b Alternative\n",
+    "heq_70 = []\n",
+    "for t in temperatures_C: \n",
+    "    if t>=70: \n",
+    "        heq_70.append(t)\n",
+    "print('temperatures higher or equal than 70ºC', heq_70)\n",
+    "'''\n",
     "\n",
     "\n",
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
+    "mu = sum(temperatures_C)/len(temperatures_C)\n",
+    "print('mean =', mu)\n",
     "\n",
+    "'''\n",
+    "# 4b Alternative\n",
+    "mu = 0\n",
+    "for t in temperatures_C: \n",
+    "    mu += t\n",
+    "mu = mu/len(temperatures_C)\n",
+    "print('mean 2 =', mu)\n",
+    "'''\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "\n",
+    "estimation_C = (temperatures_C[2]+temperatures_C[4])/2\n",
+    "print('Estimation of the temperature at 3:00 =', estimation_C)\n",
     "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
+    "temperatures_C[3] = estimation_C\n",
+    "print('Corrected temperatures after estimation: ', temperatures_C)\n",
     "\n",
     "\n",
-    "# Bonus: pass the list of ºC to ºFarenheit\n",
-    "\n"
+    "# Bonus: convert the list of ºC to ºFarenheit\n",
+    "temperatures_F = [(1.8 * c + 32) for c in temperatures_C]\n",
+    "print('Temperatures in Fahrenheit Grades =', temperatures_F)\n"
    ]
   },
   {
@@ -136,32 +188,32 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Print True or False depending on whether you would change the cooling system or not\n"
+    "# Print True or False depending on whether you would change the cooling system or not\n",
+    "\n",
+    "change = len(heq_70) > 4 or maxi > 80 or mu > 65\n",
+    "print(change)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Goals\n",
-    "\n",
-    "1. Treatment of lists\n",
-    "2. Use of loop or list comprenhention\n",
-    "3. Calculation of the mean, minimum and maximum.\n",
-    "4. Filtering of lists.\n",
-    "5. Interpolate an outlier.\n",
-    "6. Logical operators.\n",
-    "7. Print"
+    "## Future improvements\n",
+    "1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
+    "2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
+    "3. Average of each of the lists (ºC and ºF). How they relate?\n",
+    "4. Standard deviation of each of the lists. How they relate?\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
