--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,21 +20,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 10.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
-    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "advance_per_day = daily_advance - night_retreat\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "while accumulated_distance < well_height:\n",
+    "    if (well_height - accumulated_distance) < daily_advance:\n",
+    "        days = ((well_height-daily_advance)/(advance_per_day))+1\n",
+    "    else:\n",
+    "        False\n",
+    "    \n",
+    "    accumulated_distance += advance_per_day\n",
     "\n",
+    "total_dist = accumulated_distance + (well_height - accumulated_distance)\n",
     "\n",
-    "# Print the result with print('Days =', days)\n"
+    "# Print the result with print('Days =', days)\n",
+    "print('Days =', days)"
    ]
   },
   {
@@ -69,16 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
     "\n",
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "well_height = 125\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "advance_per_day = daily_advance - night_retreat\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "\n",
+    "days = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
     "\n",
@@ -88,22 +114,15 @@
     "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "\n",
-    "\n",
+    "print(max(advance_cm))\n",
+    "print(min(advance_cm))\n",
     "\n",
     "# What is its average progress?\n",
-    "\n",
+    "print(mean(advance_cm))\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
