--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -49,7 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Assign 0 to each variable that stores the victories\n"
+    "# Assign 0 to each variable that stores the victories\n",
+    "g_score = 0\n",
+    "s_score = 0"
    ]
   },
   {
@@ -58,18 +60,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Execution of spell clashes\n"
+    "# Execution of spell clashes\n",
+    "for x in range(len(gandalf)):\n",
+    "    if (saruman[x] > gandalf[x]):\n",
+    "        s_score += saruman[x]\n",
+    "    else:\n",
+    "        g_score += gandalf[x]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saruman wins\n"
+     ]
+    }
+   ],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
-    "\n"
+    "if g_score > s_score:\n",
+    "    print('Gandalf wins')\n",
+    "elif s_score > g_score:\n",
+    "    print('Saruman wins')\n",
+    "else:\n",
+    "    print('Tie')\n"
    ]
   },
   {
@@ -116,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
