--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,17 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Days = 10.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -53,6 +45,38 @@
     "    accumulated_distance += advance_per_day\n",
     "\n",
     "total_dist = accumulated_distance + (well_height - accumulated_distance)\n",
+    "\n",
+    "# Print the result with print('Days =', days)\n",
+    "print('Days =', days)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assign problem data to variables with representative names\n",
+    "# well height, daily advance, night retreat, accumulated distance\n",
+    "\n",
+    "well_height = 125\n",
+    "daily_advance = 30\n",
+    "night_retreat = 20\n",
+    "accumulated_distance = 0\n",
+    "advance_per_day = daily_advance - night_retreat\n",
+    "\n",
+    "# Assign 0 to the variable that represents the solution\n",
+    "days = 0\n",
+    "\n",
+    "# Write the code that solves the problem\n",
+    "while accumulated_distance < well_height:\n",
+    "    accumulated_distance += advance_per_day\n",
+    "    days +=1\n",
+    "\n",
+    "    if (well_height - accumulated_distance) < daily_advance:\n",
+    "        break\n",
+    "\n",
+    "days += 1\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
     "print('Days =', days)"
@@ -90,9 +114,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 6\n",
+      "[10, 1, 13, 57, 24, 25]\n",
+      "The max displacement is 57\n",
+      "The min displacement is 1\n",
+      "The avg progress is 21.666666666666668\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -100,29 +136,51 @@
     "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
     "well_height = 125\n",
     "night_retreat = 20\n",
-    "accumulated_distance = 0\n",
-    "advance_per_day = daily_advance - night_retreat\n",
+    "accumulated_dist = 0\n",
+    "\n",
+    "\n",
     "\n",
     "# Assign 0 to the variable that represents the solution\n",
-    "days = 0\n",
+    "days_total = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
+    "daily_adv = []\n",
+    "for i in range(len(advance_cm)):\n",
+    "    adv = advance_cm[i] - night_retreat\n",
+    "    daily_adv.append(adv)\n",
     "\n",
+    "for i in daily_adv:\n",
+    "    accumulated_dist += i\n",
+    "    days_total += 1\n",
+    "    if accumulated_dist > well_height:\n",
+    "        break\n",
+    "    else: \n",
+    "        continue\n",
     "\n",
+    "actual_displacements = []\n",
+    "for x in range(days_total):\n",
+    "    actual_displacements.append(daily_adv[x])\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
-    "\n",
+    "print('Days =', days_total)\n",
+    "print(actual_displacements)\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
-    "print(max(advance_cm))\n",
-    "print(min(advance_cm))\n",
-    "\n",
+    "print('The max displacement is', max(actual_displacements))\n",
+    "print('The min displacement is', min(actual_displacements))\n",
     "# What is its average progress?\n",
-    "print(mean(advance_cm))\n",
+    "print('The avg progress is', sum(actual_displacements)/len(actual_displacements))\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
