Finish Duel & start with Bus

--- a/duel/duel.ipynb
+++ b/duel/duel.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,31 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Execution of spell clashes\n",
-    "for x in range(len(gandalf)):\n",
-    "    if (saruman[x] > gandalf[x]):\n",
-    "        s_score += saruman[x]\n",
-    "    else:\n",
-    "        g_score += gandalf[x]\n"
+    "if len(gandalf) == len(saruman):\n",
+    "    for x in range(len(gandalf)):\n",
+    "        if (saruman[x] > gandalf[x]):\n",
+    "            s_score += 1\n",
+    "        if (saruman[x] < gandalf[x]):\n",
+    "            g_score += 1\n",
+    "        else:\n",
+    "            g_score += 0\n",
+    "            s_score += 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saruman wins\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We check who has won, do not forget the possibility of a draw.\n",
     "# Print the result based on the winner.\n",
@@ -136,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,51 +155,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assign spell power lists to variables\n",
-    "\n"
+    "'''Replacing each element in the list with the values of the POWER dict'''\n",
+    "gandalf[:]=[POWER.get(y,'') for y in gandalf]\n",
+    "saruman[:]=[POWER.get(x,'') for x in saruman]\n",
+    "\n",
+    "g_score = 0\n",
+    "s_score = 0\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gandalf wins\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. A sorcerer wins if he succeeds in winning 3 spell clashes in a row.\n",
     "\n",
-    "\n",
     "# Execution of spell clashes\n",
     "\n",
+    "if len(gandalf) == len(saruman):\n",
+    "    for x in range(len(gandalf)):\n",
+    "        if (saruman[x] > gandalf[x]):\n",
+    "            s_score += 1\n",
+    "        if (saruman[x] < gandalf[x]):\n",
+    "            g_score += 1\n",
+    "        else:\n",
+    "            g_score += 0\n",
+    "            s_score += 0\n",
     "\n",
     "\n",
     "# check for 3 wins in a row\n",
     "\n",
+    "gandalf_wins_3_row = 0\n",
+    "saruman_wins_3_row = 0\n",
     "\n",
-    "# check the winner\n"
+    "for i in range(len(gandalf)-2):\n",
+    "    if gandalf[i] > saruman[i] and gandalf[i+1] > saruman[i+1] and gandalf[i+2] > saruman[i+2]:\n",
+    "        gandalf_wins_3_row += 1\n",
+    "    if gandalf[i] < saruman[i] and gandalf[i+1] < saruman[i+1] and gandalf[i+2] < saruman[i+2]:\n",
+    "        saruman_wins_3_row +=1\n",
+    "    if (saruman_wins_3_row == 1) or (gandalf_wins_3_row == 1):\n",
+    "        break\n",
+    "\n",
+    "# check the winner\n",
+    "\n",
+    "if gandalf_wins_3_row == 1:\n",
+    "    print('Gandalfs wins')\n",
+    "if saruman_wins_3_row == 1:\n",
+    "    print('Saruman wins')\n",
+    "\n",
+    "else:\n",
+    "    if g_score > s_score:\n",
+    "        print('Gandalf wins')\n",
+    "    elif s_score > g_score:\n",
+    "        print('Saruman wins')\n",
+    "    else:\n",
+    "        print('Tie')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average for Gandalf is: 35.0\n",
+      "The average for Saruman is: 30.5\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the spell lists.\n",
-    "\n"
+    "mean_gandalf = sum(gandalf)/len(gandalf)\n",
+    "mean_saruman = sum(saruman)/len(saruman)\n",
+    "\n",
+    "print('The average for Gandalf is:', mean_gandalf)\n",
+    "print('The average for Saruman is:', mean_saruman)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The std of the Gandalf spell list is: 16.88\n",
+      "The std of the Saruman spell list is: 15.56\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the spell lists.\n",
-    "\n"
+    "'''Calculating the variance and std of the Gandalf spell list'''\n",
+    "var_gandalf = 0\n",
+    "\n",
+    "for i in gandalf:\n",
+    "    num = ((i - mean_gandalf) ** 2) / (len(gandalf)) #assuming that the list is the entire population\n",
+    "    var_gandalf += num\n",
+    "\n",
+    "std_gandalf = var_gandalf ** (1/2)\n",
+    "print('The std of the Gandalf spell list is: %.2f' % std_gandalf)\n",
+    "\n",
+    "'''Calculating the variance and std of the Saruman spell list''' \n",
+    "var_saruman = 0\n",
+    "\n",
+    "for i in saruman:\n",
+    "    num = ((i - mean_saruman) ** 2) / (len(saruman)) #assuming that the list is the entire population\n",
+    "    var_saruman += num\n",
+    "\n",
+    "std_saruman = var_saruman ** (1/2)\n",
+    "print('The std of the Saruman spell list is: %.2f' % std_saruman)\n"
    ]
   },
   {
