Edit Snail and finish Bus

--- a/snail-and-well/snail-and-well.ipynb
+++ b/snail-and-well/snail-and-well.ipynb
@@ -20,9 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 10.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -39,12 +47,9 @@
     "while accumulated_distance < well_height:\n",
     "    if (well_height - accumulated_distance) < daily_advance:\n",
     "        days = ((well_height-daily_advance)/(advance_per_day))+1\n",
-    "    else:\n",
-    "        False\n",
     "    \n",
     "    accumulated_distance += advance_per_day\n",
     "\n",
-    "total_dist = accumulated_distance + (well_height - accumulated_distance)\n",
     "\n",
     "# Print the result with print('Days =', days)\n",
     "print('Days =', days)"
@@ -52,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Days = 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Assign problem data to variables with representative names\n",
     "# well height, daily advance, night retreat, accumulated distance\n",
@@ -114,18 +127,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+      "[10, 1, 13, 57, 24, 25, 3, 25, -8, 14, 35]\n",
       "Days = 6\n",
-      "[10, 1, 13, 57, 24, 25]\n",
       "The max displacement is 57\n",
       "The min displacement is 1\n",
-      "The avg progress is 21.666666666666668\n"
+      "The avg progress is 21.666666666666668\n",
+      "The std of the actual displacement list is: 17.81\n"
      ]
     }
    ],
@@ -138,18 +153,22 @@
     "night_retreat = 20\n",
     "accumulated_dist = 0\n",
     "\n",
-    "\n",
-    "\n",
     "# Assign 0 to the variable that represents the solution\n",
     "days_total = 0\n",
     "\n",
     "# Write the code that solves the problem\n",
-    "daily_adv = []\n",
+    "\n",
+    "'''Getting the exact daily displacement (advance - retreat)'''\n",
+    "daily_displacement = []\n",
     "for i in range(len(advance_cm)):\n",
     "    adv = advance_cm[i] - night_retreat\n",
-    "    daily_adv.append(adv)\n",
+    "    daily_displacement.append(adv)\n",
     "\n",
-    "for i in daily_adv:\n",
+    "print(advance_cm)\n",
+    "print(daily_displacement)\n",
+    "    \n",
+    "'''Calculating how many days in total it took to climb the well'''\n",
+    "for i in daily_displacement:\n",
     "    accumulated_dist += i\n",
     "    days_total += 1\n",
     "    if accumulated_dist > well_height:\n",
@@ -157,21 +176,37 @@
     "    else: \n",
     "        continue\n",
     "\n",
+    "'''Obtaining a list of the actual displacements used to climb the well''' #actual means the displacements used to climb the well in 6 days minus their respectives retreates\n",
     "actual_displacements = []\n",
     "for x in range(days_total):\n",
-    "    actual_displacements.append(daily_adv[x])\n",
+    "    actual_displacements.append(daily_displacement[x])\n",
+    "    \n",
     "\n",
     "# Print the result with print('Days =', days)\n",
     "print('Days =', days_total)\n",
-    "print(actual_displacements)\n",
+    "\n",
     "\n",
     "# What is its maximum displacement in a day? And its minimum?\n",
     "print('The max displacement is', max(actual_displacements))\n",
     "print('The min displacement is', min(actual_displacements))\n",
+    "\n",
+    "\n",
     "# What is its average progress?\n",
-    "print('The avg progress is', sum(actual_displacements)/len(actual_displacements))\n",
+    "mean_displacement = sum(actual_displacements)/len(actual_displacements)\n",
+    "print('The avg progress is', mean_displacement)\n",
+    "\n",
     "\n",
     "# What is the standard deviation of your displacement during the day?\n",
+    "'''First I need to calculate the variance of the actual displacements'''\n",
+    "\n",
+    "var_displacement = 0\n",
+    "for i in actual_displacements:\n",
+    "    num = ((i - mean_displacement)**2) / (len(actual_displacements)) #assuming that the list is the entire population\n",
+    "    var_displacement += num\n",
+    "    \n",
+    "'''From the variance, calculate the std'''\n",
+    "std_displacement = var_displacement ** (1/2)\n",
+    "print('The std of the actual displacement list is: %.2f' % std_displacement)\n",
     "\n"
    ]
   },
@@ -180,7 +215,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#What should I do with the last displacement of my actual_displacement if with 45 on day 6 i reach the well \n",
+    "#so I should not retreat to obtain 25 as my last displacement"
+   ]
   }
  ],
  "metadata": {
