--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,22 +57,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Robin Hood hit an arrow with another arrow in cordinates (x,y) - \"i\" times\n",
+      "(4, 5) - 2 times\n",
+      "(5, 7) - 3 times\n",
+      "(2, 2) - 2 times\n",
+      "(-3, 2) - 2 times\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Robin Hood is famous for hitting an arrow with another arrow. Did you get it?\n",
-    "\n"
+    "'''Creating a dictionary with keys as the coordenates and values as the counts of each elements is \"points\" '''\n",
+    "count = {x:points.count(x) for x in points}\n",
+    "\n",
+    "'''If the values are > 1 means that Robin Hood hit the same target more than once'''\n",
+    "\n",
+    "print('Robin Hood hit an arrow with another arrow in cordinates (x,y) - \"i\" times')\n",
+    "\n",
+    "for keys, values in count.items():\n",
+    "    if values > 1:\n",
+    "        print(keys, '-', values, 'times') #this will print the key-value pairs whos values are >1\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In Q1 landed: 10 arrows.\n",
+      "In Q2 landed: 6 arrows.\n",
+      "In Q3 landed: 2 arrows.\n",
+      "In Q4 landed: 2 arrows.\n",
+      "In x=0 and positive y axis landed: 1 arrows.\n",
+      "In x=0 and negative y axis landed: 1 arrows.\n",
+      "In y=0 and negative x axis landed: 0 arrows.\n",
+      "In y=0 and positive x axis landed: 0 arrows.\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Calculate how many arrows have fallen in each quadrant.\n",
-    "\n"
+    "Q1, Q2, Q3, Q4 = 0,0,0,0\n",
+    "\n",
+    "#Setting up the variables, including if the arrow lands on the border of an axis, \n",
+    "#not counting for the Quadrant and/or origin\n",
+    "\n",
+    "placed_positive_y_axis = 0\n",
+    "placed_negative_y_axis = 0\n",
+    "placed_positive_x_axis = 0\n",
+    "placed_negative_x_axis = 0\n",
+    "at_origin = 0\n",
+    "\n",
+    "\n",
+    "for i in range(len(points)):\n",
+    "    x = points[i][0]\n",
+    "    y = points[i][1]\n",
+    "\n",
+    "    if (x > 0 and y > 0): \n",
+    "        Q1 +=1 \n",
+    "    elif (x < 0 and y > 0): \n",
+    "        Q2 +=1 \n",
+    "    elif (x < 0 and y < 0): \n",
+    "        Q3 +=1 \n",
+    "    elif (x > 0 and y < 0): \n",
+    "        Q4 +=1 \n",
+    "    elif (x == 0 and y > 0): \n",
+    "        placed_positive_y_axis +=1  #if the arrow lands on a border i.e. x=0 or y=0\n",
+    "    elif (x == 0 and y < 0): \n",
+    "        placed_negative_y_axis +=1 \n",
+    "    elif (y == 0 and x < 0): \n",
+    "        placed_negative_x_axis +=1 \n",
+    "    elif (y == 0 and x > 0): \n",
+    "        placed_positive_x_axis +=1 \n",
+    "    else: \n",
+    "        at_origin +=1\n",
+    "\n",
+    "print('In Q1 landed:', Q1, 'arrows.')\n",
+    "print('In Q2 landed:', Q2, 'arrows.')\n",
+    "print('In Q3 landed:', Q3, 'arrows.')\n",
+    "print('In Q4 landed:', Q4, 'arrows.')\n",
+    "print('In x=0 and positive y axis landed:', placed_positive_y_axis, 'arrows.')\n",
+    "print('In x=0 and negative y axis landed:', placed_negative_y_axis, 'arrows.')\n",
+    "print('In y=0 and negative x axis landed:', placed_negative_x_axis, 'arrows.')\n",
+    "print('In y=0 and positive x axis landed:', placed_positive_x_axis, 'arrows.')\n"
    ]
   },
   {
