--- a/robin-hood/robin-hood.ipynb
+++ b/robin-hood/robin-hood.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,18 +57,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Robin Hood hit an arrow with another arrow in cordinates (x,y) - \"i\" times\n",
-      "(4, 5) - 2 times\n",
-      "(5, 7) - 3 times\n",
-      "(2, 2) - 2 times\n",
-      "(-3, 2) - 2 times\n"
+      "Robin Hood hit an arrow with another arrow in points (x,y) - \"i\" times\n",
+      "points: (4, 5) - 2 times\n",
+      "points: (5, 7) - 3 times\n",
+      "points: (2, 2) - 2 times\n",
+      "points: (-3, 2) - 2 times\n"
      ]
     }
    ],
@@ -79,17 +79,17 @@
     "\n",
     "'''If the values are > 1 means that Robin Hood hit the same target more than once'''\n",
     "\n",
-    "print('Robin Hood hit an arrow with another arrow in cordinates (x,y) - \"i\" times')\n",
+    "print('Robin Hood hit an arrow with another arrow in points (x,y) - \"i\" times')\n",
     "\n",
     "for keys, values in count.items():\n",
     "    if values > 1:\n",
-    "        print(keys, '-', values, 'times') #this will print the key-value pairs whos values are >1\n",
+    "        print('points:',keys, '-', values, 'times') #this will print the key-value pairs whos values are >1\n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -156,24 +156,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The closest points to the center are (0, 2) and (0, -2)\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. Find the point closest to the center. Calculate its distance to the center\n",
     "# Defining a function that calculates the distance to the center can help.\n",
-    "\n"
+    "\n",
+    "'''Calculating distance to the origin and puttin the results in a list'''\n",
+    "distance_to_origin = []\n",
+    "\n",
+    "for i in range(len(points)):\n",
+    "    x = points[i][0]\n",
+    "    y = points[i][1]\n",
+    "    d = (((x - 0)**2) + ((y - 0)**2)) ** (1/2)\n",
+    "    distance_to_origin.append(d)\n",
+    "\n",
+    "'''Calculating the smallest distances and its respective indices so I can recall them from the \"points\" list'''\n",
+    "min_indicies = []\n",
+    "smallest = min(distance_to_origin)\n",
+    "for index, element in enumerate(distance_to_origin):\n",
+    "    if smallest == element: # check if this element is the minimum_value\n",
+    "        min_indicies.append(index) # add the index to the list if it is\n",
+    "\n",
+    "print('The closest points to the center are', points[min_indicies[0]], 'and', points[min_indicies[1]])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The archer needs to pick: 2 arrows from the forest\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. If the target has a radius of 9, calculate the number of arrows that \n",
     "# must be picked up in the forest.\n",
-    "\n"
+    "\n",
+    "'''Asuming that the archer needs to pick the arrows that missed the target if the radios is 9 then...'''\n",
+    "\n",
+    "r = 9\n",
+    "pick_arrows_in_forest = 0\n",
+    "\n",
+    "for i in range(len(points)):\n",
+    "    x = points[i][0]\n",
+    "    y = points[i][1]\n",
+    "\n",
+    "    if (x)**2 + (y)**2 >= (r ** 2):\n",
+    "        pick_arrows_in_forest += 1\n",
+    "\n",
+    "print('The archer needs to pick:',pick_arrows_in_forest, 'arrows from the forest')\n"
    ]
   },
   {
