--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-e0922f540a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# 5.1 Solve the fault in the sensor by estimating a value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m'''Converting my data to a dictionay where Hours and Temperatures records are the keys'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-e0922f540a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# 5.1 Solve the fault in the sensor by estimating a value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m'''Converting my data to a dictionay where Hours and Temperatures records are the keys'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
      ]
     }
@@ -190,12 +190,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cooling system must be changed\n"
+     ]
+    }
+   ],
    "source": [
     "# Print True or False depending on whether you would change the cooling system or not\n",
-    "\n"
+    "\n",
+    "cs_shut_down = 'The cooling system must be changed'\n",
+    "cs_working_fine = 'The cooling systmen works fine'\n",
+    "\n",
+    "'''Calculating how many records where above or equal to 70'''\n",
+    "temp_greater_70 = 0\n",
+    "for items in temp_C:\n",
+    "    if items >= 70:\n",
+    "        temp_greater_70 +=1\n",
+    "\n",
+    "\n",
+    "'''Calculating if there is any record above 88'''\n",
+    "temp_higher_88 = 0\n",
+    "for temps in temp_C:\n",
+    "    if temps >= 88:\n",
+    "        temp_higher_88 += 1\n",
+    "\n",
+    "'''Setting the logical operations to make a decision'''\n",
+    "if temp_greater_70 > 4 or temp_higher_88 >=1 or mean_temp > 65:\n",
+    "    print(cs_shut_down)\n",
+    "else:\n",
+    "    print(cs_working_fine)\n"
    ]
   },
   {
@@ -211,32 +240,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sensors recorded temperatures above 70ºC during: 5 hours in the whole day\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. We want the hours (not the temperatures) whose temperature exceeds 70ºC\n",
-    "\n"
+    "\n",
+    "hours_above_70 = []\n",
+    "\n",
+    "for temp in temp_C:\n",
+    "    if temp > 70:\n",
+    "        hours_above_70.append(1)\n",
+    "    else:\n",
+    "        hours_above_70.append(0)\n",
+    "\n",
+    "hours = sum(hours_above_70)\n",
+    "\n",
+    "print('The sensors recorded temperatures above 70ºC during:', hours, 'hours in the whole day')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The condition that those hours are more than 4 consecutive is NOT met\n"
+     ]
+    }
+   ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
-    "\n"
+    "condition_met = False\n",
+    "for i in range(len(hours_above_70)-3):\n",
+    "    if (hours_above_70[i] + hours_above_70[i+1] + hours_above_70[i+2] + hours_above_70[i+3]) == 4:\n",
+    "        condition_met = True\n",
+    "        break\n",
+    "\n",
+    "if condition_met == True:\n",
+    "    print('The condition that those hours are more than 4 consecutive is met')\n",
+    "else:\n",
+    "    print('The condition that those hours are more than 4 consecutive is NOT met')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean temperature throughout the day is: 58.83 \n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'temp_F' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-3e108f5bf24b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The mean temperature throughout the day is: %.2f '\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmean_temp_C\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmean_temp_F\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The mean temperature throughout the day is: %.2f '\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmean_temp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'temp_F' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
-    "\n"
+    "mean_temp_C = sum(temp_C)/len(temp_C)\n",
+    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_C)\n",
+    "\n",
+    "mean_temp_F = sum(temp_F)/len(temp_F)\n",
+    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_F)\n"
    ]
   },
   {
@@ -246,7 +334,13 @@
    "outputs": [],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "\n"
+    "from numpy import std\n",
+    "\n",
+    "std_temp_C = std(temp_C)\n",
+    "print('The std of the temperature in C throughout the day is: %.2f ' % std_temp_C)\n",
+    "\n",
+    "std_temp_F = std(temp_F)\n",
+    "print('The std of the temperature in F throughout the day is: %.2f ' % std_temp_F)"
    ]
   },
   {
