Temperature is finished

--- a/temperature/temperature.ipynb
+++ b/temperature/temperature.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -105,30 +105,26 @@
       "80\n",
       "83\n",
       "79\n",
-      "The mean temperature throughout the day is: 58.83 \n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-e0922f540a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# 5.1 Solve the fault in the sensor by estimating a value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m'''Converting my data to a dictionay where Hours and Temperatures records are the keys'''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+      "The mean temperature throughout the day is: 58.83  \n",
+      "\n",
+      "The updated list is: [33, 66, 65, 62, 59, 60, 62, 64, 70, 76, 80, 69, 80, 83, 68, 79, 61, 53, 50, 49, 53, 48, 45, 39] \n",
+      "\n",
+      "The updated temperature list in ºFarenheit is: [91.4, 150.8, 149.0, 143.6, 138.2, 140.0, 143.6, 147.2, 158.0, 168.8, 176.0, 156.2, 176.0, 181.4, 154.4, 174.2, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
      ]
     }
    ],
    "source": [
     "# assign a variable to the list of temperatures\n",
     "temp_C = [33,66,65,0,59,60,62,64,70,76,80,69,80,83,68,79,61,53,50,49,53,48,45,39]\n",
+    "hours = list(range(len(temp_C)))\n",
     "\n",
     "# 1. Calculate the minimum of the list and print the value using print()\n",
+    "\n",
     "min_temp = min(temp_C)\n",
     "print('The minimum temperature recorded is', min_temp)\n",
     "\n",
     "# 2. Calculate the maximum of the list and print the value using print()\n",
+    "\n",
     "max_temp = max(temp_C)\n",
     "print('The maximum temperature recorded is', max_temp)\n",
     "\n",
@@ -143,33 +139,23 @@
     "# 4. Calculate the mean temperature throughout the day and print the result\n",
     "\n",
     "mean_temp = sum(temp_C)/len(temp_C)\n",
-    "print('The mean temperature throughout the day is: %.2f ' % mean_temp)\n",
+    "print('The mean temperature throughout the day is: %.2f ' % mean_temp , '\\n')\n",
     "\n",
     "# 5.1 Solve the fault in the sensor by estimating a value\n",
-    "import pandas as pd\n",
-    "\n",
-    "'''Converting my data to a dictionay where Hours and Temperatures records are the keys'''\n",
-    "temp_dict = {'hours': hours, 'temperature' : temp_C}\n",
-    "\n",
-    "'''Converting my dictionary to a Pandas Data Frame'''\n",
-    "df_temp = pd.DataFrame(temp_dict)\n",
-    "\n",
-    "'''Replacing the record \"0\" as a missing value'''\n",
-    "df_temp['temperature'] = df_temp['temperature'].replace(0, np.nan)\n",
-    "\n",
-    "'''Interpolating the missing value'''\n",
-    "df_temp = df_temp.interpolate()\n",
-    "\n",
     "# 5.2 Update of the estimated value at 03:00 on the list\n",
     "\n",
-    "'''Converting the column \"temperature\" values into a list'''\n",
-    "update_temp_C = (list(df_temp['temperature'].values))\n",
-    "print('The update temperature list is:',update_temp_C)\n",
+    "'''Estimating the value by interpolating it with the value (n-1 + n+1) //2 and replacing it simultaneusly'''\n",
+    "for n, i in enumerate(temp_C):\n",
+    "    if i == 0:\n",
+    "        temp_C[n] = (temp_C[n-1] + temp_C[n+1]) // 2\n",
+    "        \n",
+    "print('The updated list is:', temp_C, '\\n')\n",
     "\n",
     "# Bonus: convert the list of ºC to ºFarenheit\n",
+    "\n",
     "temp_F =[]\n",
     "\n",
-    "for i in update_temp_C:\n",
+    "for i in temp_C:\n",
     "    temp = round(((1.8 * i) + 32),2)\n",
     "    temp_F.append(temp)\n",
     "\n",
@@ -190,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +268,7 @@
    ],
    "source": [
     "# 2. Condition that those hours are more than 4 consecutive and consecutive, not simply the sum of the whole set. Is this condition met?\n",
+    "\n",
     "condition_met = False\n",
     "for i in range(len(hours_above_70)-3):\n",
     "    if (hours_above_70[i] + hours_above_70[i+1] + hours_above_70[i+2] + hours_above_70[i+3]) == 4:\n",
@@ -296,51 +283,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean temperature throughout the day is: 58.83 \n"
+      "The mean temperature throughout the day is: 61.42 \n",
+      "The mean temperature throughout the day is: 142.55 \n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'temp_F' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-3e108f5bf24b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The mean temperature throughout the day is: %.2f '\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmean_temp_C\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mmean_temp_F\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'The mean temperature throughout the day is: %.2f '\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mmean_temp_F\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'temp_F' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'In this case, the mean of temp_F is the mean of temp_C but in Farenheit instead of Celsius'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 3. Average of each of the lists (ºC and ºF). How they relate?\n",
+    "\n",
     "mean_temp_C = sum(temp_C)/len(temp_C)\n",
     "print('The mean temperature throughout the day is: %.2f ' % mean_temp_C)\n",
     "\n",
     "mean_temp_F = sum(temp_F)/len(temp_F)\n",
-    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_F)\n"
+    "print('The mean temperature throughout the day is: %.2f ' % mean_temp_F)\n",
+    "\n",
+    "#Comment\n",
+    "\n",
+    "'''Both means are the same in terms of measuring centrality'''\n",
+    "'''When you add the mean by a konstant, you are just shifting the variable'''\n",
+    "'''And when you multiplyit by an another konstant, you are scaling it'''\n",
+    "'''In this case, the mean of temp_F is the mean of temp_C but in Farenheit instead of Celsius'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The std for the temperatures in ºC is: 13.332\n",
+      "The std for the temperatures in ºF is: 23.997\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. Standard deviation of each of the lists. How they relate?\n",
-    "from numpy import std\n",
     "\n",
-    "std_temp_C = std(temp_C)\n",
-    "print('The std of the temperature in C throughout the day is: %.2f ' % std_temp_C)\n",
+    "'''Calculating the variance first to then calculate the std'''\n",
     "\n",
-    "std_temp_F = std(temp_F)\n",
-    "print('The std of the temperature in F throughout the day is: %.2f ' % std_temp_F)"
+    "var_temp_C = 0\n",
+    "\n",
+    "for i in temp_C:\n",
+    "    num = ((i - mean_temp_C) ** 2) / (len(temp_C)-1)\n",
+    "    var_temp_C += num\n",
+    "\n",
+    "std_temp_C = var_temp_C ** (1/2) \n",
+    "\n",
+    "var_temp_F = 0\n",
+    "\n",
+    "for i in temp_F:\n",
+    "    num = ((i - mean_temp_F) ** 2) / (len(temp_F)-1)\n",
+    "    var_temp_F += num\n",
+    "\n",
+    "std_temp_F = var_temp_F ** (1/2)\n",
+    "\n",
+    "print('The std for the temperatures in ºC is: %.3f' % std_temp_C)\n",
+    "print('The std for the temperatures in ºF is: %.3f' % std_temp_F)\n",
+    "\n",
+    "#Comment\n",
+    "\n",
+    "'''The standard deviation is a measure of \"spread\"'''\n",
+    "'''Adding a konstant number to each value of the ºC temperature list'''\n",
+    "'''will change the location of the points in the plane but not the spread'''\n",
+    "'''Multypling each point by a konstant does not change the location but'''\n",
+    "'''will change the spread by scaling it as shown in the result where we multiply'''\n",
+    "'''each ºC point by 1.8, thus scaling the spread from 13.322 to 23.997'''"
    ]
   },
   {
