--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,16 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
+    "import random\n",
     "\n",
     "# Assign to a list the 3 possible options: 'stone', 'paper' or 'scissors'.\n",
     "\n",
+    "outcomes = ['stone', 'paper', 'scissors']\n",
+    "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
+    "\n",
+    "\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
