--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,9 +25,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your choice: paper\n",
+      "Machine choice: scissors\n",
+      "Machine wins this round\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 0\n",
+      "\n",
+      "\n",
+      "What is your choice: paper\n",
+      "Machine choice: stone\n",
+      "User wins this round\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 1\n",
+      "\n",
+      "\n",
+      "What is your choice: paper\n",
+      "Machine choice: stone\n",
+      "User wins this round\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 2\n",
+      "\n",
+      "\n",
+      "What is your choice: scissors\n",
+      "Machine choice: scissors\n",
+      "Its a tie\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 2\n",
+      "\n",
+      "\n",
+      "What is your choice: scissors\n",
+      "Machine choice: scissors\n",
+      "Its a tie\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 2\n",
+      "\n",
+      "\n",
+      "What is your choice: paper\n",
+      "Machine choice: stone\n",
+      "User wins this round\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 3\n",
+      "\n",
+      "\n",
+      "What is your choice: paper\n",
+      "Machine choice: stone\n",
+      "User wins this round\n",
+      "Total games: 7\n",
+      "Minimun games to win: 4\n",
+      "Machine: 1 User: 4\n",
+      "\n",
+      "\n",
+      "The User wins the game!!!!!\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
@@ -39,40 +103,132 @@
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "\n",
+    "max_games = random.choice(list(range(1,10,2)))\n",
     "\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
     "\n",
+    "games_to_win = (max_games // 2) + 1\n",
+    "\n",
     "# Define a function that randomly returns one of the 3 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
     "\n",
+    "mac_choice = ''\n",
+    "\n",
+    "def machine_choice():\n",
+    "    global mac_choice\n",
+    "    mac_choice = random.choice(outcomes)\n",
+    "    return mac_choice\n",
     "\n",
     "# Define a function that asks your choice: 'stone', 'paper' or 'scissors'\n",
     "# you should only allow one of the 3 options. This is defensive programming.\n",
     "# If it is not stone, paper or scissors keep asking until it is.\n",
     "\n",
+    "your_choice = ''\n",
+    "\n",
+    "def u_choice():\n",
+    "    global your_choice\n",
+    "    while True:\n",
+    "        try:\n",
+    "            your_choice = str.lower(input('What is your choice: '))\n",
+    "\n",
+    "        except ValueError:\n",
+    "            print(\"Sorry, I didn't understand that.\")\n",
+    "            continue\n",
+    "\n",
+    "        if your_choice not in outcomes:\n",
+    "            print(\"Sorry, your response must 'stone','paper' or 'scissors' \\n\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            break\n",
+    "  \n",
+    "    return your_choice\n",
+    "\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
+    "\n",
+    "dict_combats = {\n",
+    "  'paper' : 'stone',\n",
+    "  'stone' : 'scissors',\n",
+    "  'scissors' : 'paper',\n",
+    "}\n",
+    "\n",
+    "\n",
+    "outcome_per_combat = 0\n",
+    "\n",
+    "def combat():\n",
+    "    machine_choice()\n",
+    "    u_choice()\n",
+    "    global mac_choice\n",
+    "    global your_choice\n",
+    "    global outcome_per_combat\n",
+    "    if dict_combats[your_choice] == mac_choice:\n",
+    "        outcome_per_combat = 2\n",
+    "    if dict_combats[mac_choice] == your_choice:\n",
+    "        outcome_per_combat = 1\n",
+    "    if dict_combats[mac_choice] == dict_combats[your_choice]:\n",
+    "        outcome_per_combat = 0\n",
+    "\n",
+    "    return outcome_per_combat\n",
     "\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
     "\n",
+    "def state_game():\n",
+    "    global mac_wins\n",
+    "    global user_wins\n",
+    "\n",
+    "    combat()\n",
+    "    print('Machine choice:', mac_choice)\n",
+    "  \n",
+    "    if outcome_per_combat == 1:\n",
+    "        print('Machine wins this round')\n",
+    "        mac_wins += 1\n",
     "    \n",
+    "    if outcome_per_combat == 2:\n",
+    "        print('User wins this round')\n",
+    "        user_wins +=1\n",
+    "    \n",
+    "    elif outcome_per_combat == 0:\n",
+    "        print('Its a tie')\n",
+    "    \n",
+    "    print('Total games:', max_games)\n",
+    "    print('Minimun games to win:', games_to_win)\n",
+    "    print('Machine:', mac_wins, 'User:', user_wins)\n",
+    "    print('\\n')\n",
+    "\n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
+    "mac_wins = 0\n",
+    "user_wins = 0\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
     "\n",
+    "def main():\n",
+    "    while (mac_wins < games_to_win) and (user_wins < games_to_win):\n",
+    "        if (mac_wins < games_to_win) or (user_wins < games_to_win):\n",
+    "            state_game()\n",
+    "        else:\n",
+    "            break\n",
+    "  \n",
+    "    return mac_wins, user_wins\n",
+    "  \n",
     "\n",
+    "main()\n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
-    "  "
+    "  \n",
+    "if mac_wins > user_wins:\n",
+    "    print('The Machine wins the game!!!!!')\n",
+    "\n",
+    "else: \n",
+    "    print('The User wins the game!!!!!')"
    ]
   },
   {
@@ -98,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +307,13 @@
     "# Print by console the winner of the game based on who has more accumulated wins\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
